--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     restart: always
     environment:
       - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - APP_DB_USER=docker
-      - APP_DB_PASS=docker
+      - APP_DB_PASS=${APP_DB_PASS}
       - APP_DB_NAME=docker
     volumes:
       - ./db:/docker-entrypoint-initdb.d
