--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
       retries: 10
     restart: always
     environment:
-      - POSTGRES_USER=root
+      - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - APP_DB_USER=docker
+      - APP_DB_USER=${APP_DB_USER}
       - APP_DB_PASS=${APP_DB_PASS}
-      - APP_DB_NAME=docker
+      - APP_DB_NAME=${APP_DB_NAME}
     volumes:
       - ./db:/docker-entrypoint-initdb.d
     ports:
